--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -379,5 +379,45 @@
   "logout_confirmation_confirm": "Log Out",
   "@logout_confirmation_confirm": {
     "description": "The label for the button to confirm the logout action."
+  },
+  "stats_screen_title": "Statistics",
+  "@stats_screen_title": {
+    "description": "The title for the statistics screen."
+  },
+  "history_screen_title": "History",
+  "@history_screen_title": {
+    "description": "The title for the history screen."
+  },
+  "total_notes_label": "Total Notes",
+  "@total_notes_label": {
+    "description": "The label for the total number of notes."
+  },
+  "todo_notes_label": "Todo Notes",
+  "@todo_notes_label": {
+    "description": "The label for the notes that are still to be done."
+  },
+  "done_notes_label": "Done Notes",
+  "@done_notes_label": {
+    "description": "The label for the notes that have been completed."
+  },
+  "pie_chart_todo_label": "Todo",
+  "@pie_chart_todo_label": {
+    "description": "The label for the 'Todo' section in the pie chart."
+  },
+  "pie_chart_done_label": "Done",
+  "@pie_chart_done_label": {
+    "description": "The label for the 'Done' section in the pie chart."
+  },
+  "notes_done_label": "Notes Completed",
+  "@notes_done_label": {
+    "description": "The label indicating the notes that have been completed."
+  },
+  "notes_todo_label": "Notes to Be Done",
+  "@notes_todo_label": {
+    "description": "The label indicating the notes that still need to be completed."
+  },
+  "notes_total_label": "Notes in Total",
+  "@notes_total_label": {
+    "description": "The label indicating the total number of notes."
   }
 }
