--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -364,64 +364,64 @@
   "@settingsButtonTip": {
     "description": "Đây là gợi ý của nút cài đặt"
   },
-  "logout_confirmation_title": "Xác nhận đăng xuất",
-  "@logout_confirmation_title": {
+  "logoutConfirmationTitle": "Xác nhận đăng xuất",
+  "@logoutConfirmationTitle": {
     "description": "Tiêu đề hiển thị trong hộp thoại xác nhận đăng xuất."
   },
-  "logout_confirmation_message": "Bạn có chắc chắn muốn đăng xuất không?",
-  "@logout_confirmation_message": {
+  "logoutConfirmationMessage": "Bạn có chắc chắn muốn đăng xuất không?",
+  "@logoutConfirmationMessage": {
     "description": "Thông báo yêu cầu người dùng xác nhận ý định đăng xuất."
   },
-  "logout_confirmation_cancel": "Hủy",
-  "@logout_confirmation_cancel": {
+  "logoutConfirmationCancel": "Hủy",
+  "@logoutConfirmationCancel": {
     "description": "Nhãn cho nút hủy hành động đăng xuất."
   },
-  "logout_confirmation_confirm": "Đăng xuất",
-  "@logout_confirmation_confirm": {
+  "logoutConfirmationConfirm": "Đăng xuất",
+  "@logoutConfirmationConfirm": {
     "description": "Nhãn cho nút xác nhận hành động đăng xuất."
   },
-  "stats_screen_title": "Số liệu",
-  "@stats_screen_title": {
+  "statsScreenTitle": "Số liệu",
+  "@statsScreenTitle": {
     "description": "Tiêu đề cho màn hình số liệu."
   },
-  "history_screen_title": "Lịch sử",
-  "@history_screen_title": {
+  "historyScreenTitle": "Lịch sử",
+  "@historyScreenTitle": {
     "description": "Tiêu đề cho màn hình lịch sử."
   },
-  "total_notes_label": "Tổng số ghi chú",
-  "@total_notes_label": {
+  "totalNotesLabel": "Tổng số ghi chú",
+  "@totalNotesLabel": {
     "description": "Nhãn cho tổng số lượng ghi chú."
   },
-  "todo_notes_label": "Ghi chú cần làm",
-  "@todo_notes_label": {
+  "todoNotesLabel": "Ghi chú cần làm",
+  "@todoNotesLabel": {
     "description": "Nhãn cho các ghi chú cần thực hiện."
   },
-  "done_notes_label": "Ghi chú đã hoàn thành",
-  "@done_notes_label": {
+  "doneNotesLabel": "Ghi chú đã hoàn thành",
+  "@doneNotesLabel": {
     "description": "Nhãn cho các ghi chú đã hoàn thành."
   },
-  "pie_chart_todo_label": "Cần làm",
-  "@pie_chart_todo_label": {
+  "pieChartTodoLabel": "Cần làm",
+  "@pieChartTodoLabel": {
     "description": "Nhãn cho phần 'Cần làm' trong biểu đồ tròn."
   },
-  "pie_chart_done_label": "Đã hoàn thành",
-  "@pie_chart_done_label": {
+  "pieChartDoneLabel": "Đã hoàn thành",
+  "@pieChartDoneLabel": {
     "description": "Nhãn cho phần 'Đã hoàn thành' trong biểu đồ tròn."
   },
-  "notes_done_label": "Ghi chú đã hoàn thành",
-  "@notes_done_label": {
+  "notesDoneLabel": "Ghi chú đã hoàn thành",
+  "@notesDoneLabel": {
     "description": "Nhãn chỉ số lượng ghi chú đã được hoàn thành."
   },
-  "notes_todo_label": "Ghi chú cần làm",
-  "@notes_todo_label": {
+  "notesTodoLabel": "Ghi chú cần làm",
+  "@notesTodoLabel": {
     "description": "Nhãn chỉ số lượng ghi chú cần thực hiện."
   },
-  "notes_total_label": "Tổng số ghi chú",
-  "@notes_total_label": {
+  "notesTotalLabel": "Tổng số ghi chú",
+  "@notesTotalLabel": {
     "description": "Nhãn chỉ tổng số lượng ghi chú."
   },
-  "data_of": "Dữ liệu vào thời điểm",
-  "@data_of": {
+  "dataOf": "Dữ liệu vào thời điểm",
+  "@dataOf": {
     "description": "Tiêu đề của biểu đồ cột trong màn hình phân tích"
   }
 }
